library import fix

--- a/churn-prediction.ipynb
+++ b/churn-prediction.ipynb
@@ -10,36 +10,26 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import xgboost as xgb\n",
+    "\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.decomposition import PCA\n",
     "from sklearn import linear_model\n",
-    "from sklearn import neighbors\n",
-    "from sklearn import tree\n",
     "from sklearn import ensemble\n",
     "from sklearn import svm\n",
     "from sklearn import neural_network\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.svm import SVC\n",
-    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import precision_score, accuracy_score\n",
-    "from sklearn.metrics import classification_report, confusion_matrix  \n",
+    "from sklearn.metrics import confusion_matrix  \n",
     "from sklearn import metrics\n",
-    "import plotly.express as px\n",
-    "import gc\n",
     "\n",
-    "import xgboost as xgb\n",
     "\n",
     "SEED = 42\n",
     "\n",
@@ -3091,23 +3081,6 @@
    ],
    "source": [
     "print(accuracy_score(y_test, y_stack1_fitter_three), precision_score(y_test, y_stack1_fitter_three))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7931769722814499 0.6666666666666666\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(accuracy_score(y_test, y_stack1_fitter_three), precision_score(y_test, y_stack1_fitter_three)) #max_iter = 500\n"
    ]
   },
   {
